[project]
name = "relevance-db"
version = "0.1.0"
description = "Retrieval that understands relevance, not just similarity"
authors = [
    {name = "suryanox"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
