[project]
name = "relevance-db"
version = "0.1.0"
description = "Retrieval that understands relevance, not just similarity"
authors = [
    {name = "suryanox"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lancedb (>=0.30.2,<0.31.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "litellm (==1.65.0)"
]


[tool.poetry]
name = "relevance-db"
packages = [{ include = "relevancedb", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
